automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,11 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect database and create cursor here"
+    "# connect database and create cursor here\n",
+    "import sqlite3 \n",
+    "connection = sqlite3.connect('pets_database.db')\n",
+    "cursor = connection.cursor()"
    ]
   },
   {
