automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,7 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create table here"
+    "# create table here\n",
+    "cursor.e"
    ]
   },
   {
