automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -75,20 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7f901cf3b340>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create table here\n",
     "cursor.execute('''CREATE TABLE cats (\n",
@@ -125,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert Maru into the pet_database.db here\n"
+    "# insert Maru into the pet_database.db here"
    ]
   },
   {
