automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -121,11 +121,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f901cf3b340>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# insert Maru into the pet_database.db here\n"
+    "# insert Maru into the pet_database.db here\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ('Maru', 3, 'Scottish Fold');''')"
    ]
   },
   {
