automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# execute the INSERT INTO statements here"
+    "# execute the INSERT INTO statements here\n"
    ]
   },
   {
